[gd_scene load_steps=18 format=3 uid="uid://dtx7yre83vthn"]

[ext_resource type="Script" path="res://minigame/bowling/Scripts/bowling.gd" id="1_mypux"]
[ext_resource type="Texture2D" uid="uid://dduyfxnjyh2de" path="res://minigame/bowling/Assets/game_frame.png" id="2_oddi8"]
[ext_resource type="Texture2D" uid="uid://cijkd5mkebnce" path="res://minigame/bowling/Assets/Bowling_Game_Screen_Background_2.png" id="3_3a0q0"]
[ext_resource type="Texture2D" uid="uid://bfb42cdc6lk6d" path="res://minigame/bowling/Assets/Pins_Up.png" id="4_chk5g"]
[ext_resource type="Script" path="res://minigame/bowling/Scripts/pumpkin.gd" id="5_48gey"]
[ext_resource type="Texture2D" uid="uid://cjoj0wfwypwou" path="res://minigame/bowling/Assets/Pins_Strike.png" id="5_lt6yq"]
[ext_resource type="Texture2D" uid="uid://bcx4hhv6eh2pb" path="res://minigame/bowling/Assets/Rolling_Pumpkin_-_Frame_1-removebg-preview.png" id="6_13bcn"]
[ext_resource type="Texture2D" uid="uid://0kksyt1uvxqj" path="res://minigame/bowling/Assets/Pins_Some.png" id="6_l2637"]
[ext_resource type="Texture2D" uid="uid://cff2eqmffc807" path="res://minigame/bowling/Assets/Crash_Effect.png" id="7_ltpmm"]
[ext_resource type="Texture2D" uid="uid://bu7pn8xo5k6fm" path="res://minigame/bowling/Assets/Rolling_Pumpkin_-_Frame_2-removebg-preview.png" id="7_nmhta"]
[ext_resource type="Texture2D" uid="uid://d13e7td68bcx7" path="res://minigame/bowling/Assets/Rolling_Pumpkin_-_Frame_3-removebg-preview.png" id="8_8mgud"]
[ext_resource type="Texture2D" uid="uid://d1kjx58e3pw66" path="res://maple_street/Assets/NPC/ColorblockedbearKRAsmall.png" id="12_7wbhp"]
[ext_resource type="Script" path="res://minigame/bowling/Scenes/bear.gd" id="13_s3e5a"]
[ext_resource type="AudioStream" uid="uid://d1kljt4hyfpvr" path="res://minigame/bowling/sounds/A_Halloween_on_Maple_Street_-_Bear_Bowling.mp3" id="14_0876e"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hhyq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_13bcn")
}],
"loop": true,
"name": &"rest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_13bcn")
}, {
"duration": 1.0,
"texture": ExtResource("7_nmhta")
}, {
"duration": 1.0,
"texture": ExtResource("8_8mgud")
}],
"loop": true,
"name": &"roll",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_54kkt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_00xyg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_mypux")

[node name="frame" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_oddi8")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(800, 80)
scale = Vector2(1.1, 1.1)

[node name="background" type="TextureRect" parent="Node2D"]
offset_right = 840.0
offset_bottom = 840.0
texture = ExtResource("3_3a0q0")

[node name="pins_Up" type="TextureRect" parent="Node2D"]
offset_left = 175.0
offset_top = 30.0
offset_right = 676.0
offset_bottom = 393.0
texture = ExtResource("4_chk5g")

[node name="pins_Strike" type="TextureRect" parent="Node2D"]
visible = false
offset_left = 145.0
offset_top = -20.0
offset_right = 675.0
offset_bottom = 427.0
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_lt6yq")

[node name="pins_Some_Right" type="TextureRect" parent="Node2D"]
visible = false
offset_left = 173.0
offset_top = 30.0
offset_right = 674.0
offset_bottom = 394.0
texture = ExtResource("6_l2637")

[node name="pins_Some_Left" type="TextureRect" parent="Node2D"]
visible = false
offset_left = 173.0
offset_top = 30.0
offset_right = 674.0
offset_bottom = 394.0
texture = ExtResource("6_l2637")
flip_h = true

[node name="Crash" type="TextureRect" parent="Node2D"]
visible = false
offset_left = 30.0
offset_top = -40.0
offset_right = 680.0
offset_bottom = 410.0
scale = Vector2(1.2, 1.2)
texture = ExtResource("7_ltpmm")

[node name="pumpkin" type="Area2D" parent="Node2D" groups=["pumpkin"]]
position = Vector2(420, 700)
script = ExtResource("5_48gey")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D/pumpkin"]
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_hhyq5")
animation = &"roll"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/pumpkin" groups=["pumpkin"]]
position = Vector2(0, 20)
shape = SubResource("CircleShape2D_54kkt")

[node name="strike" type="Area2D" parent="Node2D" groups=["strike"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/strike"]
position = Vector2(420, 220)
scale = Vector2(8, 15)
shape = SubResource("RectangleShape2D_00xyg")

[node name="some" type="Area2D" parent="Node2D" groups=["some"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/some"]
position = Vector2(259, 220)
scale = Vector2(8, 15)
shape = SubResource("RectangleShape2D_00xyg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/some"]
position = Vector2(581, 220)
scale = Vector2(8, 15)
shape = SubResource("RectangleShape2D_00xyg")

[node name="miss" type="Area2D" parent="Node2D" groups=["some"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/miss"]
position = Vector2(98, 220)
scale = Vector2(8, 15)
shape = SubResource("RectangleShape2D_00xyg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/miss"]
position = Vector2(743, 220)
scale = Vector2(8, 15)
shape = SubResource("RectangleShape2D_00xyg")

[node name="bear" type="Sprite2D" parent="Node2D"]
visible = false
position = Vector2(1500, 200)
rotation = -1.5708
scale = Vector2(2, 2)
texture = ExtResource("12_7wbhp")
script = ExtResource("13_s3e5a")

[node name="Button" type="Button" parent="."]
offset_left = 404.0
offset_top = 974.0
offset_right = 491.0
offset_bottom = 1005.0
text = "End Game"

[node name="BowlingMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_0876e")
autoplay = true

[connection signal="area_shape_entered" from="Node2D/strike" to="Node2D/pumpkin" method="_on_strike_area_shape_entered"]
[connection signal="area_shape_entered" from="Node2D/some" to="Node2D/pumpkin" method="_on_some_area_shape_entered"]
[connection signal="area_shape_entered" from="Node2D/miss" to="Node2D/pumpkin" method="_on_miss_area_shape_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
